Closed
Bug 1399325
Opened 4 years ago
Closed 3 years ago
Assertion failure: mSpec.Length() <= (uint32_t) net_GetURLMaxLength() (The spec should never be this long, we missed a check.), at netwerk/base/nsStandardURL.cpp:1367
Categories
(Core :: Networking, defect, P2)
Tracking
()
RESOLVED
FIXED
mozilla61
People
(Reporter: bc, Assigned: valentin)
References
()
Details
(Keywords: assertion, Whiteboard: [necko-triaged])
Attachments
(2 files)
1. https://search.dagrsol.com/solr/select?q=text_t:%22Reyna%20%29.%22&rows=100&grep=%22%22&wt=grephtml 2. Assertion failure: mSpec.Length() <= (uint32_t) net_GetURLMaxLength() (The spec should never be this long, we missed a check.), at /builds/worker/workspace/build/src/netwerk/base/nsStandardURL.cpp:1367 #01: nsURIHashKey::HashKey [netwerk/base/nsURIHashKey.h:52] #02: PLDHashTable::ComputeKeyHash [xpcom/ds/PLDHashTable.cpp:513] #03: PLDHashTable::Search [xpcom/ds/PLDHashTable.cpp:532] #04: mozilla::places::History::RegisterVisitedCallback [xpcom/ds/nsTHashtable.h:154] #05: mozilla::dom::Link::LinkState [dom/base/Link.cpp:399] #06: nsIDocument::FlushPendingLinkUpdates [dom/base/nsDocument.cpp:10376] #07: nsCSSFrameConstructor::ResolveStyleContext [layout/base/nsCSSFrameConstructor.cpp:5194] Windows and Linux at least.
Comment 1•4 years ago
|
||
Valentin, can you take a look?
Flags: needinfo?(valentin.gosu)
Priority: -- → P2
Whiteboard: [necko-triaged]
Assignee | ||
Updated•4 years ago
|
Assignee: nobody → valentin.gosu
Flags: needinfo?(valentin.gosu)
Comment hidden (mozreview-request) |
![]() |
||
Comment 3•3 years ago
|
||
mozreview-review |
Comment on attachment 8961664 [details] Bug 1399325 - Do not allow parsed URLs to exceed max length https://reviewboard.mozilla.org/r/230538/#review236594 ::: netwerk/base/nsStandardURL.cpp:939 (Diff revision 1) > } > CoalescePath(coalesceFlag, buf + mDirectory.mPos); > } > mSpec.SetLength(strlen(buf)); > NS_ASSERTION(mSpec.Length() <= approxLen, "We've overflowed the mSpec buffer!"); > + MOZ_ASSERT(mSpec.Length() <= (uint32_t) net_GetURLMaxLength(), not: no space between ) net_GetURLMaxLength?
Attachment #8961664 -
Flags: review?(honzab.moz) → review+
Pushed by valentin.gosu@gmail.com: https://hg.mozilla.org/integration/autoland/rev/40b4fba437ca Do not allow parsed URLs to exceed max length r=mayhemer
Comment 5•3 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/40b4fba437ca
Status: NEW → RESOLVED
Closed: 3 years ago
status-firefox61:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla61
Comment 6•3 years ago
|
||
I assume that if we've lived with it for this long, a bit longer won't hurt.
You need to log in
before you can comment on or make changes to this bug.
Description
•