Bug 1399325 - Do not allow parsed URLs to exceed max length r=mayhemer

When normalizing the spec, some characters get percent encoded, so even if the original input was shorter than the max length, the final result could be longer.

MozReview-Commit-ID: 78IDM7Hoa55

--HG--
extra : rebase_source : b57caca6e5c55bf290b15e2f084e72e09f051c8f