netwerk/base/nsStandardURL.cpp
@@ -781,6 +781,12 @@ nsStandardURL::BuildNormalizedSpec(const char *spec,
     URLSegment query(mQuery);
     URLSegment ref(mRef);
 
+    // The encoded string could be longer than the original input, so we need
+    // to check the final URI isn't longer than the max length.
+    if (approxLen + 1 > (uint32_t) net_GetURLMaxLength()) {
+        return NS_ERROR_MALFORMED_URI;
+    }
+
     //
     // generate the normalized URL string
     //
@@ -931,6 +937,9 @@ nsStandardURL::BuildNormalizedSpec(const char *spec,
     }
     mSpec.SetLength(strlen(buf));
     NS_ASSERTION(mSpec.Length() <= approxLen, "We've overflowed the mSpec buffer!");
+    MOZ_ASSERT(mSpec.Length() <= (uint32_t) net_GetURLMaxLength(),
+               "The spec should never be this long, we missed a check.");
+
     return NS_OK;
 }
 
